@startuml
'https://plantuml.com/sequence-diagram

class List{
    main()
    start()

}
class ListController{
+TableColumn<ItemObject, String> ItemName;
+TableColumn<ItemObject, String> ItemDescription;
+TableColumn<ItemObject, String> ItemDueDate;
+TableColumn<ItemObject, String> ItemStatus;
+TableView<ItemObject> itemTable;
+TextField addItemName;
+Text pathToFile;
+TextField addItemDescription;
+Button loadListButton;
+DatePicker addItemDueDate;
+DatePicker updateDate;
+void editTitleClick()
+void editDescriptionClick()
+void addNewItemClick()
+void removeItemClick()
+void editDueDateClick()
+void markCompleteClick()
+void markIncompleteCLick()
+void showCompleteClick()
+void showAllClick()
+void loadListClick()
+void loadHelper()
+void removeAllCLick()
+void helpButtonClick()
+void saveListAsClick()
}

class EditItem{
int length
FileIO change
String[] properties
String[] selectedProperties
String currentLine
String newPath
File file
+String addItem(String, String[])
+boolean checkSerial(String, String)
+boolean removeItem(String, ItemObject)
+boolean matches(ItemObject, ItemObject)
+boolean editValue(String path, ItemObject, String)
+boolean editSerial(String, ItemObject, String)
+boolean editName(String, ItemObject,newName)

}

class ItemObject{
    -SimpleStringProperty serial;
    -SimpleStringProperty name;
    -SimpleIntegerProperty value;
    +String getSerial()
    +String getName()
    +Integer getValue()
    +ItemObject(Integer, String, String)
}

class EditList{
    ArrayList<ItemObject> itemsInList
    String currentLine
    String[] properties
    ItemObject tempItem
    +File loadList(String)
    +ArrayList<ItemObject> getInfo(File)
    +ArrayList<ItemObject> searchName(File, String)
    +ArrayList<ItemObject> searchSerial(File, String)
    +boolean saveList(String, String)
    +boolean tabSave(String, File)
    +boolean htmlSave(String, File)
    +void convertHTML(File)
}



javafx.Application <|-- ListController

ListController -- List
ListController -- EditItem
ListController -- ItemObject
ListController -- EditList



@enduml